--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
+  dartz: ^0.10.1
   flutter:
     sdk: flutter
   go_router: ^7.0.0
+  logger: ^1.3.0
   rive: ^0.10.4
 
 dev_dependencies:
